Bug 152669 - Some ruled lines in the table are not set in cases other than "Left-to-Right(Horizontal)".
Summary: Some ruled lines in the table are not set in cases other than "Left-to-Right(...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.1.3 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.6.0 target:7.5.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Table-Borders
  Show dependency treegraph
 
Reported: 2022-12-25 02:22 UTC by Saburo
Modified: 2023-03-05 12:05 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
image (120.58 KB, image/png)
2022-12-25 02:24 UTC, Saburo
Details
Text direction (30.05 KB, application/pdf)
2022-12-27 06:50 UTC, Saburo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Saburo 2022-12-25 02:22:12 UTC
Description:
The horizontal lines on both ends of the table are not set.

Steps to Reproduce:
1.[Format]-[Page Style]-[Page]-[Text direction]:Right-to-Left(Vertical)
2.[Table]-[Insert Table] Columns:4 Rows:4 (Insert)
3.[Table Properties]dialog [Borders]-LineArrangement preset:"OuterBorder and inner all lines"

Actual Results:
The horizontal lines on both ends of the table are not set.

Expected Results:
I wanted you to draw a line on both ends of the column


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cfc73f3373f49770b859bc68cbf6bd987342f9ad
CPU threads: 12; OS: Windows 10.0 Build 22621; UI render: default; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: CL threaded
Comment 1 Saburo 2022-12-25 02:24:18 UTC
Created attachment 184335 [details]
image
Comment 2 Saburo 2022-12-27 06:50:53 UTC
Created attachment 184363 [details]
Text direction
Comment 3 Dieter 2023-01-11 07:34:28 UTC
I confirm it with

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b4dc43b6d01d85802d5674c3a27789d6354e39a8
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (de_DE); UI: en-GB
Calc: CL threaded

Reproducible also in Safe Mode

but not in

Version: 7.2.7.2 (x64) / LibreOffice Community
Build ID: 8d71d29d553c0f7dcbfa38fbfda25ee34cce99a2
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL
Comment 4 raal 2023-01-26 16:02:52 UTC
 This seems to have begun at the below commit.
Adding Cc: to Miklos Vajna; Could you possibly take a look at this one?
Thanks
 f6cac8622ca8958ec8cc12631b5571c10f36045a is the first bad commit
commit f6cac8622ca8958ec8cc12631b5571c10f36045a
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Thu Jan 6 18:43:21 2022 +0100

    source 526c8bdb54eff942d5213030d1455f97720a1ba7

https://gerrit.libreoffice.org/c/core/+/128053
Comment 5 Commit Notification 2023-02-06 16:02:19 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1f373260cf25ca2f36a929e1a27fde00641e5c09

tdf#152669 sw: fix missing table borders in the non-Word-table-cell case

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-02-07 13:54:31 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/0bde6c12f88fa352cbc39a92db5c828d93a76112

tdf#152669 sw: fix missing table borders in the non-Word-table-cell case

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Dieter 2023-03-05 12:05:51 UTC
VERIFIED with

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d7c609dbb1bd08865b43719d2fb7c316d30bcde5
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (de_DE); UI: en-GB
Calc: CL threaded

Miklos, thank you for fixing it!