tdf#152669 sw: fix missing table borders in the non-Word-table-cell case

A 4x4 table had partially missing inner borders when the page's writing
mode was set to vertical, for a newly created document.

This went wrong with commit 526c8bdb54eff942d5213030d1455f97720a1ba7
(sw: fix too long inner borders intersecting with outer borders for Word
cells, 2022-01-06), which forgot to make changes in
SwTabFramePainter::Insert() conditional on bWordTableCell.

Fix the problem by making the SwTabFramePainter::Insert() changes
conditional, similar to how SwTabFramePainter::FindStylesForLine()
already did this.

Note how the DocumentSettingId::TABLE_ROW_KEEP compat setting is off for
new documents.

Change-Id: Ie29d1613251d869e7ae78ea7dab3e75f0e6de229
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146585
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins